Page now counts with bus schedule

--- a/index.html
+++ b/index.html
@@ -1,33 +1,29 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>  R A N D O M P R O F E </title>
-		
-        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-		<style>
-            button {
-                width: 200px;
-                height: 80px;
-                font-size: 24px;
-                background-color: red;
-            }
+		<title>Cucao Travel</title>
+	<style>
+		h1{
+			background-color: teal; 
+			width: auto;
+			height: 100px;
+			padding: 30px;
+			font-family: "Courier New";
+			font-size: 50px; 
+			text-align: center;
+			border: 5px dotted springgreen;
 
-            button:hover {
-                background-color: pink;
-            }
-        </style>
-	</head>
+		}
+	</style>
+    </head>
 	<body>
-		<center> <h1> R A N D O M P R O F E </h1> </center> 
+		<h1> Cucao Travel  </h1>
         
-		Welcome to my page! <br><br>
-		Link to Infoda:<br>
-		<a href="http://app4.udec.cl/infoda2/index_sso/?pkudec=pMMwTmMJP8xsV9zunPfx9W9ZP8OExMA7jDJ6uiOJ3yW%2F8K%2BSpzBxww%3D%3D"> 
-			<button> Go! </button></a><br>
-		Our library:<br>
-		<a href="C:\Users\Cachalote\Documents\UDEC\2020 - 1\git\project0\library.html"> 
-			<button> Go! </button></a><br>
+		<center> <img src= Cucao.jpg alt= "Visit Muelle de las Almas!"> </center>
 
+		<h2> <center> Cucao is a rural area located in the Greater Island of Chiloé with wonderful native forests and crystalline lakes and beaches to explore. Daily departures directly from Castro. Come to visit its beautiful landscapes! </center> </h2>
+
+		<h2> <center> Check bus schedule <a href = buses.html> here </a> </h2> </center>
 		
 
 	</body>
